# capstone-ds

./: .gitignore  PROJECT-DESC.md  README.md  package-lock.json  package.json  pyproject.toml
.antigravitycli/: 0fc375b7-7cbb-40f6-8dae-824098d2e420.json
.github/workflows/: ci.yml
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/api/: routes.py  upload_validation.py
backend/core/: config.py  logging_config.py
backend/ml_pipeline/: README.md
backend/ml_pipeline/audio/: analysis.py  emotion.py  extraction.py  filler.txt
backend/ml_pipeline/fusion/: scorer.py
backend/ml_pipeline/text/: content_helpers.py  scoring.py  transcription.py
backend/ml_pipeline/video/: emotion.py  stub.py
backend/ml_pipeline/video/models/: best.pt
backend/tests/: test_audio_extraction.py  test_content_helpers.py  test_routes_contract.py  test_scoring_integrity.py  test_upload_validation.py  test_video_frame_sampling.py
design-system/lumen/: MASTER.md
design-system/lumen/pages/: dashboard.md
frontend/: package-lock.json  package.json
frontend/app/: actions.tsx  globals.css  layout.tsx  page.tsx
frontend/app/auth/: actions.ts
frontend/app/components/: AppIcon.tsx  AuthVisualPanel.tsx  Sidebar.tsx
frontend/app/dashboard/: page.tsx
frontend/app/history/: page.tsx
frontend/app/lib/: analysis.ts
frontend/app/login/: page.tsx
frontend/app/onboarding/: actions.ts  page.tsx
frontend/app/register/: page.tsx
frontend/app/report-cards/: page.tsx
frontend/components/ui/: Aurora.css  Aurora.tsx  BorderGlow.css  BorderGlow.tsx  animated-stats.tsx  animated-text-cycle.tsx  button-witn-icon.tsx  button.tsx  features-7.tsx  glass-button.tsx  marquee.tsx  scroll-cta.tsx  scroll-effects.tsx  sliding-testimonial.tsx
frontend/prisma/: schema.prisma
frontend/public/testi-user/: Jewdomelvin.jfif  hafizh.jfif  nauval.jfif
notebooks/: emotion-detection-using-yolov8.ipynb
(+14 files in other folders)
