[project]
name = "nautilus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "librosa>=0.11.0",
    "mediapipe>=0.10.35",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.29",
    "sentence-transformers>=5.5.1",
    "soundfile>=0.13.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "transformers>=5.9.0",
    "ultralytics>=8.4.52",
    "uvicorn>=0.47.0",
]
